--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ a:hover {
 
     <section id="contact">
       <h2>Contact Me</h2>
-      <p>You can reach me at: shivaniadhiyaman@gmail.com</p>
+      <p>You can reach me at: 23f3004264@ds.study.iitm.ac.in</p>
       <ul>
         <li> <a href="https://www.linkedin.com/in/shivaniadhiyaman100/">LinkedIn</a></li>
         <li><a href="https://github.com/chivalrously-chic"> GitHub</a></li>
