--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ a:hover {
       <ul>
         <li> <a href="https://www.linkedin.com/in/shivaniadhiyaman100/">LinkedIn</a></li>
         <li><a href="https://github.com/chivalrously-chic"> GitHub</a></li>
+        <!--email_off-->23f3004264@ds.study.iitm.ac.in<!--/email_off-->
       </ul>
       <p>
         Interested in collaborating? Feel free to reach out!
